--- a/forex/webapp/templates/webapp/index.html
+++ b/forex/webapp/templates/webapp/index.html
@@ -15,6 +15,13 @@
     <script src="{% static 'webapp/js/graph.js' %}"></script>
     <!-- Add additional CSS in static file -->
     <link rel="stylesheet" href="{% static 'webapp/css/styles.css' %}">
+    <style>
+      .line {
+          fill: none;
+          stroke: steelblue;
+          stroke-width: 2px;
+      }
+    </style>
   </head>
 
   <body>
@@ -22,47 +29,48 @@
     <div class="container-fluid">
 
       <div class="row">
-	<div class="col-sm-2">
-	  {% block sidebar %}
-	  <ul class="sidebar-nav">
-	    <li>Stories Here</li>
-	  </ul>
-	  {% endblock %}
-	</div>
-	<div class="col-sm-10" id="currency-table">
-	  {% block content %}
-	  <fieldset>
-	    <legend>Global Exchange Rates based on {{ base_rate.currency.short_name }} {{ base_rate.currency.currency_name }} {{ base_rate.rate_date }}</legend>
-	    <table>
-	      <tbody>
-		{% for row in rates|columns:3 %}
-		<tr>
-		  {% for rate in row %}
-		  <td id="currency-code-{{ rate.currency.currency_code }}" class="show-history" ><input type="checkbox" /></td>
-		  <td class="flag" ><img src="{% static 'rates/images/'|add:rate.currency.flag_image_file_name %}"/></td>
+        <div class="col-sm-2">
+          {% block sidebar %}
+          <ul class="sidebar-nav">
+            <li>Stories Here</li>
+          </ul>
+          {% endblock %}
+        </div>
+        <div class="col-sm-10" id="currency-table">
+          {% block content %}
+          <fieldset>
+            <legend>Global Exchange Rates based on {{ base_rate.currency.short_name }} {{ base_rate.currency.currency_name }} {{ base_rate.rate_date }}</legend>
+            <table>
+              <tbody>
+                {% for row in rates|columns:3 %}
+                <tr>
+                  {% for rate in row %}
+                  <td id="currency-code-{{ rate.currency.currency_code }}" class="show-history" ><input type="checkbox" /></td>
+                  <td class="flag" ><img src="{% static 'rates/images/'|add:rate.currency.flag_image_file_name %}"/></td>
                   <td class="country-name" >{{ rate.currency.country_name }}</td>
                   <td class="currency-name" >{{ rate.currency.currency_name }}</td>
                   <td class="currency-rate" >{{ rate.ratio|floatformat:2 }}</td>
-		  {% endfor %}
-		</tr>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
-		{% endfor %}
-	      </tbody>
-	    </table>
-	  </fieldset>
-	  {% endblock %}
-	  <div id="base-currency-select" >Select a base currency for conversions:
-	    <select class="currency_select" id="base_currency_select">
-	      {% for currency in currencies %}
-	      <option value="{{currency.currency_code}}" {% if currency.currency_code == base_currency_code %} selected="selected" {% endif %} >
-		{{currency.short_name}} {{currency.currency_name}}
-	      </option>
-	      {% endfor %}
-	    </select>
-	    <script>
-	    </script>
-	  </div>
-	</div>
+                  {% endfor %}
+                </tr>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+                {% endfor %}
+              </tbody>
+            </table>
+          </fieldset>
+          {% endblock %}
+          <div id="base-currency-select" >Select a base currency for conversions:
+            <select class="currency_select" id="base_currency_select">
+              {% for currency in currencies %}
+              <option value="{{currency.currency_code}}" {% if currency.currency_code == base_currency_code %} selected="selected" {% endif %} >
+                {{currency.short_name}} {{currency.currency_name}}
+              </option>
+              {% endfor %}
+            </select>
+            <script>
+            </script>
+          </div>
+          <svg></svg>
+        </div>
       </div>
     </div>
     <footer>
