--- a/forex/webapp/templates/webapp/index.html
+++ b/forex/webapp/templates/webapp/index.html
@@ -16,6 +16,10 @@
     <!-- Add additional CSS in static file -->
     <link rel="stylesheet" href="{% static 'webapp/css/styles.css' %}">
     <style>
+      .axis path {
+          fill: none;
+          stroke: black;
+      }
       .line {
           fill: none;
           stroke: steelblue;
