Refactoring load and display to separate functions.

--- a/forex/webapp/templates/webapp/index.html
+++ b/forex/webapp/templates/webapp/index.html
@@ -12,8 +12,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="{% static 'webapp/js/app.js' %}"></script>
-    <script src="{% static 'webapp/js/graph.js' %}"></script>
-    <script src="{% static 'webapp/js/latest_table.js' %}"></script>
+    <script src="{% static 'webapp/js/graphs.js' %}"></script>
+    <script src="{% static 'webapp/js/tables.js' %}"></script>
     <!-- Add additional CSS in static file -->
     <link rel="stylesheet" href="{% static 'webapp/css/styles.css' %}">
     <style>
