Add pagination to the rate history table.

--- a/forex/webapp/templates/webapp/index.html
+++ b/forex/webapp/templates/webapp/index.html
@@ -7,10 +7,14 @@
     {% block title %}<title>Foreign Exchange Rates</title>{% endblock %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
+
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twbs-pagination/1.4.1/jquery.twbsPagination.min.js"></script>
+
     <script src="{% static 'webapp/js/app.js' %}"></script>
     <script src="{% static 'webapp/js/graphs.js' %}"></script>
     <script src="{% static 'webapp/js/tables.js' %}"></script>
@@ -61,7 +65,7 @@
 	<div class="col-sm-10" id="historic-table">
           <svg></svg>
           <table id="historic-rates" class="table table-striped" ><caption>Tabular Data</caption></table>
-          <div>pager</div>
+          <ul id="pagination-demo" class="pagination-sm pagination" ></ul>
 	</div>
 	<div class="col-sm-2">
           {% block sidebar %}
