--- a/forex/webapp/templates/webapp/index.html
+++ b/forex/webapp/templates/webapp/index.html
@@ -39,34 +39,45 @@
           {% block content %}
 	  <table id="latest-rates"><caption>Global Exchange Rates based on {{ base_rate.currency.short_name }} {{ base_rate.currency.currency_name }} {{ base_rate.rate_date }}</caption></table>
           {% endblock %}
-          <div id="base-currency-select" >Select a base currency for conversions:
-            <select class="currency-select" >
-              {% for currency in currencies %}
-              <option value="{{currency.currency_code}}" {% if currency.currency_code == 'EUR' %} selected="selected" {% endif %} >
-                {{currency.short_name}} {{currency.currency_name}}
-              </option>
-              {% endfor %}
-            </select>
-          </div>
-	  <div id="timespan-select" >Select a time range to view:
-	    6 months
-	    <input type="radio" name="timespan-select-button" value="6">
-	    1 year
-	    <input type="radio" name="timespan-select-button" value="12">
-	    2 years
-	    <input type="radio" name="timespan-select-button" value="24" checked="checked">
-	    3 years
-	    <input type="radio" name="timespan-select-button" value="36">
-	    5 years
-	    <input type="radio" name="timespan-select-button" value="60">
-	  </div>
         </div>
       </div>
       <div class="row">
 	<div class="col-sm-9" id="historic-table">
           <svg></svg>
-          <table id="historic-rates" class="table table-striped" ><caption>Tabular Data</caption></table>
-          <ul id="pagination-demo" class="pagination-sm pagination" ></ul>
+          <div id="controls" >
+            <div id="base-currency-select" >Base Currency:
+              <select class="currency-select" >
+                {% for currency in currencies %}
+                <option value="{{currency.currency_code}}" {% if currency.currency_code == 'EUR' %} selected="selected" {% endif %} >
+                  {{currency.short_name}} {{currency.currency_name}}
+                </option>
+                {% endfor %}
+              </select>
+            </div>
+	    <div id="timespan-select" >Time Range:
+	      6 months
+	      <input type="radio" name="timespan-select-button" value="6">
+	      1 year
+	      <input type="radio" name="timespan-select-button" value="12">
+	      2 years
+	      <input type="radio" name="timespan-select-button" value="24" checked="checked">
+	      3 years
+	      <input type="radio" name="timespan-select-button" value="36">
+	      5 years
+	      <input type="radio" name="timespan-select-button" value="60">
+	    </div>
+          </div>
+          <table id="historic-rates" class="table table-striped" >
+            <caption>Tabular Data</caption>
+            <tfoot>
+              <tr>
+                <td>
+                  <ul id="pagination-demo" class="pagination-sm pagination" ></ul>
+                </td>
+              </tr>
+            </tfoot>
+          </table>
+
 	</div>
 	<div id="news" class="col-sm-3">
           {% block sidebar %}
