Use fieldset for story container.

--- a/forex/webapp/templates/webapp/index.html
+++ b/forex/webapp/templates/webapp/index.html
@@ -79,10 +79,13 @@
           </table>
 
 	</div>
-	<div id="news" class="col-sm-3">
+	<div class="col-sm-3">
+	  <fieldset id="news">
+	    <legend>Financial Stories</legend>
+	  </fieldset>
           {% block sidebar %}
           {% endblock %}
-      </div>
+	</div>
       </div>
     </div>
     <footer>
