Make ajax urls relative and add base tag to template to allow app to be relocatable. Add requirements.txt

--- a/forex/webapp/templates/webapp/index.html
+++ b/forex/webapp/templates/webapp/index.html
@@ -5,6 +5,7 @@
   <head>
 
     {% block title %}<title>Foreign Exchange Rates</title>{% endblock %}
+    <base href="{% url 'index' %}" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
