--- a/forex/webapp/templates/webapp/index.html
+++ b/forex/webapp/templates/webapp/index.html
@@ -36,13 +36,13 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-9" id="currency-table">
+        <div class="col-sm-9" id="currency-table">
           <div class="inner">
 	    <table id="latest-rates"><caption>Global Exchange Rates based on {{ base_rate.currency.short_name }} {{ base_rate.currency.currency_name }} {{ base_rate.rate_date }}</caption></table>
           </div>
           <div id="historic-table">
             <div class="inner" >
-              <svg class="hidden-sm"></svg>
+              <svg class="hidden-sm hidden-xs"></svg>
               <div id="controls" >
                 <div id="base-currency-select" >Base Currency:
                   <select class="currency-select" >
@@ -79,7 +79,7 @@
             </div>
 	  </div>
         </div>
-	<div class="col-lg-3" id="stories">
+	<div class="col-sm-3" id="stories">
           <div class="inner" >
 	    <fieldset id="news">
 	      <legend>Financial Stories</legend>
