--- a/forex/static/webapp/css/styles.css
+++ b/forex/static/webapp/css/styles.css
@@ -9,6 +9,7 @@ body {
 }
 
 table#latest-rates {
+    font-size: 90%;
     margin-top: 40px;
     margin-bottom: 40px;
     margin-left: auto;
@@ -93,6 +94,7 @@ table#latest-rates tr td img {
 }
 
 #historic-table table {
+    font-size: 90%;
     width: auto;
     margin: 0 auto;
 }
@@ -119,6 +121,7 @@ fieldset#news legend {
 }
 
 #stories {
+    font-size: 90%;
     border-left: 1px solid #e5e5e5;
     margin-top: 40px;
 }
