Add a download rates as csv link.

--- a/forex/webapp/templates/webapp/index.html
+++ b/forex/webapp/templates/webapp/index.html
@@ -73,7 +73,7 @@
 	        </div>
               </div>
               <table id="historic-rates" class="table table-striped" >
-                <caption>Tabular Data</caption>
+                <caption>Tabular Data <a id="download-link">Download as CSV</a></caption>
                 <tfoot>
                   <tr>
                     <td>
